# flashLLM

./: CMakeLists.txt  main.cpp
examples/: decoder.py  main.py  test_quantize.py
examples/attention/: impl.py
examples/utils/: diff.py  quantize.py
src/add/: add.cpp  add.hpp
src/tensor/: tensor.hpp
test/add/: add.cc
